compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_call_trait_method_unbound.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "trait B {\n            fn value(self) -> Int32 {\n                return 0;\n            }\n        }\n\n        fn foo<T>(val: T) {\n            let _: Int32 = val.value();\n        }"
---
× error[LM4113]: could not find method
   ╭───────────
 7 │         fn foo<T>(val: T) {
 8 │             let _: Int32 = val.value();
   │                                ^^^^^^ could not find method value on type T
 9 │         }
   ╰──
